Various fixes for different issues
 - #28: Add date and time for match to card header
 - #27: Move close button for scorecard on mobile
 - #20: Home Vs Away title not centered

--- a/src/assets/css/_global.scss
+++ b/src/assets/css/_global.scss
@@ -29,10 +29,10 @@ hr.star-dark {
 hr.star-light:after,
 hr.star-dark:after {
   position: relative;
-  top: -.8em;
+  top: -0.8em;
   display: inline-block;
   padding: 0 0.25em;
-  content: '\f005';
+  content: "\f005";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   font-size: 2em;
@@ -122,9 +122,9 @@ section {
 }
 
 .box-shadow {
-  -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    2px 2px 2px 2px rgba(0, 0, 0, 0.2);  /* Firefox 3.5 - 3.6 */
-  box-shadow:         2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2); /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2); /* Firefox 3.5 - 3.6 */
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .scroll {
@@ -143,6 +143,11 @@ table {
   border-collapse: unset;
 }
 
-.mat-progress-spinner circle, .mat-spinner circle {
+.mat-progress-spinner circle,
+.mat-spinner circle {
   stroke: $secondary;
-  }
+}
+
+.font-size-3qtr {
+  font-size: 0.75rem;
+}
